In Feature engineering - create new feature-total_spending from combinning purchesd items  existing features

--- a/app.ipynb
+++ b/app.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ba5c0af4",
    "metadata": {},
    "outputs": [],
@@ -348,12 +348,18 @@
     "reference_data =  df[\"Dt_Customer\"].max()\n",
     "\n",
     "# create new feature (Costumer_Tenure)\n",
-    "df[\"Costumer_Tenure\"] = (reference_data - df[\"Dt_Customer\"]).dt.days"
+    "df[\"Costumer_Tenure\"] = (reference_data - df[\"Dt_Customer\"]).dt.days\n",
+    "\n",
+    "# total spending\n",
+    "df[\"total_spending\"] = df[\"MntWines\"] + df[\"MntFruits\"] + df[\"MntMeatProducts\"] + df[\"MntFishProducts\"] + df[\"MntSweetProducts\"] + df[\"MntGoldProds\"]\n",
+    "\n",
+    "# # total children\n",
+    "# df[\"total_child\"] = df[\"Kidhome\"] + df[\"Teenhome\"] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "9e2aafb4",
    "metadata": {},
    "outputs": [
@@ -389,8 +395,6 @@
        "      <th>Recency</th>\n",
        "      <th>MntWines</th>\n",
        "      <th>...</th>\n",
-       "      <th>MntGoldProds</th>\n",
-       "      <th>NumDealsPurchases</th>\n",
        "      <th>NumWebPurchases</th>\n",
        "      <th>NumCatalogPurchases</th>\n",
        "      <th>NumStorePurchases</th>\n",
@@ -399,6 +403,8 @@
        "      <th>Response</th>\n",
        "      <th>Age</th>\n",
        "      <th>Costumer_Tenure</th>\n",
+       "      <th>total_spending</th>\n",
+       "      <th>total_child</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -415,8 +421,6 @@
        "      <td>58</td>\n",
        "      <td>635</td>\n",
        "      <td>...</td>\n",
-       "      <td>88</td>\n",
-       "      <td>3</td>\n",
        "      <td>8</td>\n",
        "      <td>10</td>\n",
        "      <td>4</td>\n",
@@ -425,6 +429,8 @@
        "      <td>1</td>\n",
        "      <td>69</td>\n",
        "      <td>663</td>\n",
+       "      <td>1617</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -439,8 +445,6 @@
        "      <td>38</td>\n",
        "      <td>11</td>\n",
        "      <td>...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
@@ -449,6 +453,8 @@
        "      <td>0</td>\n",
        "      <td>72</td>\n",
        "      <td>113</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -463,8 +469,6 @@
        "      <td>26</td>\n",
        "      <td>426</td>\n",
        "      <td>...</td>\n",
-       "      <td>42</td>\n",
-       "      <td>1</td>\n",
        "      <td>8</td>\n",
        "      <td>2</td>\n",
        "      <td>10</td>\n",
@@ -473,6 +477,8 @@
        "      <td>0</td>\n",
        "      <td>61</td>\n",
        "      <td>312</td>\n",
+       "      <td>776</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -487,8 +493,6 @@
        "      <td>26</td>\n",
        "      <td>11</td>\n",
        "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
@@ -497,6 +501,8 @@
        "      <td>0</td>\n",
        "      <td>42</td>\n",
        "      <td>139</td>\n",
+       "      <td>53</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -511,8 +517,6 @@
        "      <td>94</td>\n",
        "      <td>173</td>\n",
        "      <td>...</td>\n",
-       "      <td>15</td>\n",
-       "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
        "      <td>6</td>\n",
@@ -521,10 +525,12 @@
        "      <td>0</td>\n",
        "      <td>45</td>\n",
        "      <td>161</td>\n",
+       "      <td>422</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
+       "<p>5 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -535,43 +541,52 @@
        "3  6182        1984  Graduation       Together  26646.0        1         0   \n",
        "4  5324        1981         PhD        Married  58293.0        1         0   \n",
        "\n",
-       "  Dt_Customer  Recency  MntWines  ...  MntGoldProds  NumDealsPurchases  \\\n",
-       "0  2012-09-04       58       635  ...            88                  3   \n",
-       "1  2014-03-08       38        11  ...             6                  2   \n",
-       "2  2013-08-21       26       426  ...            42                  1   \n",
-       "3  2014-02-10       26        11  ...             5                  2   \n",
-       "4  2014-01-19       94       173  ...            15                  5   \n",
+       "  Dt_Customer  Recency  MntWines  ...  NumWebPurchases  NumCatalogPurchases  \\\n",
+       "0  2012-09-04       58       635  ...                8                   10   \n",
+       "1  2014-03-08       38        11  ...                1                    1   \n",
+       "2  2013-08-21       26       426  ...                8                    2   \n",
+       "3  2014-02-10       26        11  ...                2                    0   \n",
+       "4  2014-01-19       94       173  ...                5                    3   \n",
        "\n",
-       "   NumWebPurchases  NumCatalogPurchases  NumStorePurchases  NumWebVisitsMonth  \\\n",
-       "0                8                   10                  4                  7   \n",
-       "1                1                    1                  2                  5   \n",
-       "2                8                    2                 10                  4   \n",
-       "3                2                    0                  4                  6   \n",
-       "4                5                    3                  6                  5   \n",
+       "   NumStorePurchases  NumWebVisitsMonth  Complain  Response  Age  \\\n",
+       "0                  4                  7         0         1   69   \n",
+       "1                  2                  5         0         0   72   \n",
+       "2                 10                  4         0         0   61   \n",
+       "3                  4                  6         0         0   42   \n",
+       "4                  6                  5         0         0   45   \n",
        "\n",
-       "   Complain  Response  Age  Costumer_Tenure  \n",
-       "0         0         1   69              663  \n",
-       "1         0         0   72              113  \n",
-       "2         0         0   61              312  \n",
-       "3         0         0   42              139  \n",
-       "4         0         0   45              161  \n",
+       "   Costumer_Tenure  total_spending  total_child  \n",
+       "0              663            1617            0  \n",
+       "1              113              27            2  \n",
+       "2              312             776            0  \n",
+       "3              139              53            1  \n",
+       "4              161             422            1  \n",
        "\n",
-       "[5 rows x 24 columns]"
+       "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head()\n",
+    "# df.columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c947348e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a890d53",
    "metadata": {},
    "outputs": [],
    "source": []
