In Feature engineering - create new feature-total_child from combinning kids and teenager in house  existing features

--- a/app.ipynb
+++ b/app.ipynb
@@ -353,8 +353,8 @@
     "# total spending\n",
     "df[\"total_spending\"] = df[\"MntWines\"] + df[\"MntFruits\"] + df[\"MntMeatProducts\"] + df[\"MntFishProducts\"] + df[\"MntSweetProducts\"] + df[\"MntGoldProds\"]\n",
     "\n",
-    "# # total children\n",
-    "# df[\"total_child\"] = df[\"Kidhome\"] + df[\"Teenhome\"] "
+    "# total children\n",
+    "df[\"total_child\"] = df[\"Kidhome\"] + df[\"Teenhome\"] "
    ]
   },
   {
