In Feature engineering - grouped somes values for Education attribute

--- a/app.ipynb
+++ b/app.ipynb
@@ -320,7 +320,7 @@
    "id": "f8de7480",
    "metadata": {},
    "source": [
-    "## Phase 2 : Feature Engineering"
+    "## Phase 1.2 : Feature Engineering"
    ]
   },
   {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "ba5c0af4",
    "metadata": {},
    "outputs": [],
@@ -354,12 +354,81 @@
     "df[\"total_spending\"] = df[\"MntWines\"] + df[\"MntFruits\"] + df[\"MntMeatProducts\"] + df[\"MntFishProducts\"] + df[\"MntSweetProducts\"] + df[\"MntGoldProds\"]\n",
     "\n",
     "# total children\n",
-    "df[\"total_child\"] = df[\"Kidhome\"] + df[\"Teenhome\"] "
+    "df[\"total_child\"] = df[\"Kidhome\"] + df[\"Teenhome\"] \n",
+    "\n",
+    "# Education\n",
+    "df[\"Education\"] = df[\"Education\"].replace({\n",
+    "    \"Basic\":\"Undergraduate\",\n",
+    "    \"2n Cycle\":\"Undergraduate\",\n",
+    "    \"Graduation\":\"Graduate\",\n",
+    "    \"Master\":\"Postgraduate\",\n",
+    "    \"PhD\":\"Postgraduate\",\n",
+    "})\n",
+    "\n",
+    "# Marital Status\n",
+    "df[\"Living_With\"] = df[\"Marital_Status\"].replace({\n",
+    "    \"Married\":\"Partner\",\n",
+    "    \"Together\":\"Partner\",\n",
+    "    \"Single\":\"Alone\",\n",
+    "    \"Divorced\":\"Alone\",\n",
+    "    \"Widow\":\"Alone\",\n",
+    "    \"Absurd\":\"Alone\",\n",
+    "    \"YOLO\":\"Alone\",\n",
+    "})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "320fe307",
+   "metadata": {},
+   "source": [
+    "## Phase 1.3 : Drop Columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "id": "33255c51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = [\"ID\", \"Year_Birth\", \"Marital_Status\", \"Kidhome\", \"Teenhome\", \"Dt_Customer\"]\n",
+    "purchase_cols = [\"MntWines\",\"MntFruits\",\"MntFruits\",\"MntFishProducts\",\"MntSweetProducts\",\"MntGoldProds\"]\n",
+    "\n",
+    "# columns to drop \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "8122cb6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ID', 'Year_Birth', 'Education', 'Marital_Status', 'Income', 'Kidhome',\n",
+       "       'Teenhome', 'Dt_Customer', 'Recency', 'MntWines', 'MntFruits',\n",
+       "       'MntMeatProducts', 'MntFishProducts', 'MntSweetProducts',\n",
+       "       'MntGoldProds', 'NumDealsPurchases', 'NumWebPurchases',\n",
+       "       'NumCatalogPurchases', 'NumStorePurchases', 'NumWebVisitsMonth',\n",
+       "       'Complain', 'Response', 'Age', 'Costumer_Tenure', 'total_spending',\n",
+       "       'total_child', 'Living_With'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "id": "9e2aafb4",
    "metadata": {},
    "outputs": [
@@ -395,7 +464,6 @@
        "      <th>Recency</th>\n",
        "      <th>MntWines</th>\n",
        "      <th>...</th>\n",
-       "      <th>NumWebPurchases</th>\n",
        "      <th>NumCatalogPurchases</th>\n",
        "      <th>NumStorePurchases</th>\n",
        "      <th>NumWebVisitsMonth</th>\n",
@@ -405,6 +473,7 @@
        "      <th>Costumer_Tenure</th>\n",
        "      <th>total_spending</th>\n",
        "      <th>total_child</th>\n",
+       "      <th>Living_With</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -412,8 +481,8 @@
        "      <th>0</th>\n",
        "      <td>5524</td>\n",
        "      <td>1957</td>\n",
-       "      <td>Graduation</td>\n",
-       "      <td>Single</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Alone</td>\n",
        "      <td>58138.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -421,7 +490,6 @@
        "      <td>58</td>\n",
        "      <td>635</td>\n",
        "      <td>...</td>\n",
-       "      <td>8</td>\n",
        "      <td>10</td>\n",
        "      <td>4</td>\n",
        "      <td>7</td>\n",
@@ -431,13 +499,14 @@
        "      <td>663</td>\n",
        "      <td>1617</td>\n",
        "      <td>0</td>\n",
+       "      <td>Alone</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2174</td>\n",
        "      <td>1954</td>\n",
-       "      <td>Graduation</td>\n",
-       "      <td>Single</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Alone</td>\n",
        "      <td>46344.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -445,7 +514,6 @@
        "      <td>38</td>\n",
        "      <td>11</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
@@ -455,13 +523,14 @@
        "      <td>113</td>\n",
        "      <td>27</td>\n",
        "      <td>2</td>\n",
+       "      <td>Alone</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>4141</td>\n",
        "      <td>1965</td>\n",
-       "      <td>Graduation</td>\n",
-       "      <td>Together</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Partner</td>\n",
        "      <td>71613.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -469,7 +538,6 @@
        "      <td>26</td>\n",
        "      <td>426</td>\n",
        "      <td>...</td>\n",
-       "      <td>8</td>\n",
        "      <td>2</td>\n",
        "      <td>10</td>\n",
        "      <td>4</td>\n",
@@ -479,13 +547,14 @@
        "      <td>312</td>\n",
        "      <td>776</td>\n",
        "      <td>0</td>\n",
+       "      <td>Partner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>6182</td>\n",
        "      <td>1984</td>\n",
-       "      <td>Graduation</td>\n",
-       "      <td>Together</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Partner</td>\n",
        "      <td>26646.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -493,7 +562,6 @@
        "      <td>26</td>\n",
        "      <td>11</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>6</td>\n",
@@ -503,13 +571,14 @@
        "      <td>139</td>\n",
        "      <td>53</td>\n",
        "      <td>1</td>\n",
+       "      <td>Partner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5324</td>\n",
        "      <td>1981</td>\n",
-       "      <td>PhD</td>\n",
-       "      <td>Married</td>\n",
+       "      <td>Postgraduate</td>\n",
+       "      <td>Partner</td>\n",
        "      <td>58293.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -517,7 +586,6 @@
        "      <td>94</td>\n",
        "      <td>173</td>\n",
        "      <td>...</td>\n",
-       "      <td>5</td>\n",
        "      <td>3</td>\n",
        "      <td>6</td>\n",
        "      <td>5</td>\n",
@@ -527,45 +595,46 @@
        "      <td>161</td>\n",
        "      <td>422</td>\n",
        "      <td>1</td>\n",
+       "      <td>Partner</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
+       "<p>5 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     ID  Year_Birth   Education Marital_Status   Income  Kidhome  Teenhome  \\\n",
-       "0  5524        1957  Graduation         Single  58138.0        0         0   \n",
-       "1  2174        1954  Graduation         Single  46344.0        1         1   \n",
-       "2  4141        1965  Graduation       Together  71613.0        0         0   \n",
-       "3  6182        1984  Graduation       Together  26646.0        1         0   \n",
-       "4  5324        1981         PhD        Married  58293.0        1         0   \n",
+       "     ID  Year_Birth     Education Marital_Status   Income  Kidhome  Teenhome  \\\n",
+       "0  5524        1957      Graduate          Alone  58138.0        0         0   \n",
+       "1  2174        1954      Graduate          Alone  46344.0        1         1   \n",
+       "2  4141        1965      Graduate        Partner  71613.0        0         0   \n",
+       "3  6182        1984      Graduate        Partner  26646.0        1         0   \n",
+       "4  5324        1981  Postgraduate        Partner  58293.0        1         0   \n",
        "\n",
-       "  Dt_Customer  Recency  MntWines  ...  NumWebPurchases  NumCatalogPurchases  \\\n",
-       "0  2012-09-04       58       635  ...                8                   10   \n",
-       "1  2014-03-08       38        11  ...                1                    1   \n",
-       "2  2013-08-21       26       426  ...                8                    2   \n",
-       "3  2014-02-10       26        11  ...                2                    0   \n",
-       "4  2014-01-19       94       173  ...                5                    3   \n",
+       "  Dt_Customer  Recency  MntWines  ...  NumCatalogPurchases  NumStorePurchases  \\\n",
+       "0  2012-09-04       58       635  ...                   10                  4   \n",
+       "1  2014-03-08       38        11  ...                    1                  2   \n",
+       "2  2013-08-21       26       426  ...                    2                 10   \n",
+       "3  2014-02-10       26        11  ...                    0                  4   \n",
+       "4  2014-01-19       94       173  ...                    3                  6   \n",
        "\n",
-       "   NumStorePurchases  NumWebVisitsMonth  Complain  Response  Age  \\\n",
-       "0                  4                  7         0         1   69   \n",
-       "1                  2                  5         0         0   72   \n",
-       "2                 10                  4         0         0   61   \n",
-       "3                  4                  6         0         0   42   \n",
-       "4                  6                  5         0         0   45   \n",
+       "   NumWebVisitsMonth  Complain  Response  Age  Costumer_Tenure  \\\n",
+       "0                  7         0         1   69              663   \n",
+       "1                  5         0         0   72              113   \n",
+       "2                  4         0         0   61              312   \n",
+       "3                  6         0         0   42              139   \n",
+       "4                  5         0         0   45              161   \n",
        "\n",
-       "   Costumer_Tenure  total_spending  total_child  \n",
-       "0              663            1617            0  \n",
-       "1              113              27            2  \n",
-       "2              312             776            0  \n",
-       "3              139              53            1  \n",
-       "4              161             422            1  \n",
+       "   total_spending  total_child  Living_With  \n",
+       "0            1617            0        Alone  \n",
+       "1              27            2        Alone  \n",
+       "2             776            0      Partner  \n",
+       "3              53            1      Partner  \n",
+       "4             422            1      Partner  \n",
        "\n",
-       "[5 rows x 26 columns]"
+       "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
