Droped unnecessary attributes(columns)

--- a/app.ipynb
+++ b/app.ipynb
@@ -395,7 +395,8 @@
     "cols = [\"ID\", \"Year_Birth\", \"Marital_Status\", \"Kidhome\", \"Teenhome\", \"Dt_Customer\"]\n",
     "purchase_cols = [\"MntWines\",\"MntFruits\",\"MntFruits\",\"MntFishProducts\",\"MntSweetProducts\",\"MntGoldProds\"]\n",
     "\n",
-    "# columns to drop \n"
+    "columns_to_drop = cols + purchase_cols \n",
+    "df.drop(columns=columns_to_drop)"
    ]
   },
   {
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "id": "9e2aafb4",
    "metadata": {},
    "outputs": [
@@ -634,7 +635,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
