Droped unnecessary attributes(columns)

--- a/app.ipynb
+++ b/app.ipynb
@@ -387,21 +387,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "33255c51",
    "metadata": {},
    "outputs": [],
    "source": [
     "cols = [\"ID\", \"Year_Birth\", \"Marital_Status\", \"Kidhome\", \"Teenhome\", \"Dt_Customer\"]\n",
-    "purchase_cols = [\"MntWines\",\"MntFruits\",\"MntFruits\",\"MntFishProducts\",\"MntSweetProducts\",\"MntGoldProds\"]\n",
+    "purchase_cols = [\"MntWines\",\"MntFruits\",\"MntMeatProducts\",\"MntFishProducts\",\"MntSweetProducts\",\"MntGoldProds\"]\n",
     "\n",
     "columns_to_drop = cols + purchase_cols \n",
-    "df.drop(columns=columns_to_drop)"
+    "cust_data = df.drop(columns=columns_to_drop)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 65,
    "id": "8122cb6b",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 70,
    "id": "9e2aafb4",
    "metadata": {},
    "outputs": [
@@ -454,17 +454,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Year_Birth</th>\n",
        "      <th>Education</th>\n",
-       "      <th>Marital_Status</th>\n",
        "      <th>Income</th>\n",
-       "      <th>Kidhome</th>\n",
-       "      <th>Teenhome</th>\n",
-       "      <th>Dt_Customer</th>\n",
        "      <th>Recency</th>\n",
-       "      <th>MntWines</th>\n",
-       "      <th>...</th>\n",
+       "      <th>NumDealsPurchases</th>\n",
+       "      <th>NumWebPurchases</th>\n",
        "      <th>NumCatalogPurchases</th>\n",
        "      <th>NumStorePurchases</th>\n",
        "      <th>NumWebVisitsMonth</th>\n",
@@ -480,17 +474,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5524</td>\n",
-       "      <td>1957</td>\n",
        "      <td>Graduate</td>\n",
-       "      <td>Alone</td>\n",
        "      <td>58138.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2012-09-04</td>\n",
        "      <td>58</td>\n",
-       "      <td>635</td>\n",
-       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
        "      <td>10</td>\n",
        "      <td>4</td>\n",
        "      <td>7</td>\n",
@@ -504,17 +492,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2174</td>\n",
-       "      <td>1954</td>\n",
        "      <td>Graduate</td>\n",
-       "      <td>Alone</td>\n",
        "      <td>46344.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2014-03-08</td>\n",
        "      <td>38</td>\n",
-       "      <td>11</td>\n",
-       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
@@ -528,17 +510,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4141</td>\n",
-       "      <td>1965</td>\n",
        "      <td>Graduate</td>\n",
-       "      <td>Partner</td>\n",
        "      <td>71613.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2013-08-21</td>\n",
        "      <td>26</td>\n",
-       "      <td>426</td>\n",
-       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
        "      <td>2</td>\n",
        "      <td>10</td>\n",
        "      <td>4</td>\n",
@@ -552,17 +528,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6182</td>\n",
-       "      <td>1984</td>\n",
        "      <td>Graduate</td>\n",
-       "      <td>Partner</td>\n",
        "      <td>26646.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2014-02-10</td>\n",
        "      <td>26</td>\n",
-       "      <td>11</td>\n",
-       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>6</td>\n",
@@ -576,17 +546,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5324</td>\n",
-       "      <td>1981</td>\n",
        "      <td>Postgraduate</td>\n",
-       "      <td>Partner</td>\n",
        "      <td>58293.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2014-01-19</td>\n",
        "      <td>94</td>\n",
-       "      <td>173</td>\n",
-       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "      <td>3</td>\n",
        "      <td>6</td>\n",
        "      <td>5</td>\n",
@@ -600,48 +564,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     ID  Year_Birth     Education Marital_Status   Income  Kidhome  Teenhome  \\\n",
-       "0  5524        1957      Graduate          Alone  58138.0        0         0   \n",
-       "1  2174        1954      Graduate          Alone  46344.0        1         1   \n",
-       "2  4141        1965      Graduate        Partner  71613.0        0         0   \n",
-       "3  6182        1984      Graduate        Partner  26646.0        1         0   \n",
-       "4  5324        1981  Postgraduate        Partner  58293.0        1         0   \n",
+       "      Education   Income  Recency  NumDealsPurchases  NumWebPurchases  \\\n",
+       "0      Graduate  58138.0       58                  3                8   \n",
+       "1      Graduate  46344.0       38                  2                1   \n",
+       "2      Graduate  71613.0       26                  1                8   \n",
+       "3      Graduate  26646.0       26                  2                2   \n",
+       "4  Postgraduate  58293.0       94                  5                5   \n",
        "\n",
-       "  Dt_Customer  Recency  MntWines  ...  NumCatalogPurchases  NumStorePurchases  \\\n",
-       "0  2012-09-04       58       635  ...                   10                  4   \n",
-       "1  2014-03-08       38        11  ...                    1                  2   \n",
-       "2  2013-08-21       26       426  ...                    2                 10   \n",
-       "3  2014-02-10       26        11  ...                    0                  4   \n",
-       "4  2014-01-19       94       173  ...                    3                  6   \n",
+       "   NumCatalogPurchases  NumStorePurchases  NumWebVisitsMonth  Complain  \\\n",
+       "0                   10                  4                  7         0   \n",
+       "1                    1                  2                  5         0   \n",
+       "2                    2                 10                  4         0   \n",
+       "3                    0                  4                  6         0   \n",
+       "4                    3                  6                  5         0   \n",
        "\n",
-       "   NumWebVisitsMonth  Complain  Response  Age  Costumer_Tenure  \\\n",
-       "0                  7         0         1   69              663   \n",
-       "1                  5         0         0   72              113   \n",
-       "2                  4         0         0   61              312   \n",
-       "3                  6         0         0   42              139   \n",
-       "4                  5         0         0   45              161   \n",
-       "\n",
-       "   total_spending  total_child  Living_With  \n",
-       "0            1617            0        Alone  \n",
-       "1              27            2        Alone  \n",
-       "2             776            0      Partner  \n",
-       "3              53            1      Partner  \n",
-       "4             422            1      Partner  \n",
-       "\n",
-       "[5 rows x 27 columns]"
+       "   Response  Age  Costumer_Tenure  total_spending  total_child Living_With  \n",
+       "0         1   69              663            1617            0       Alone  \n",
+       "1         0   72              113              27            2       Alone  \n",
+       "2         0   61              312             776            0     Partner  \n",
+       "3         0   42              139              53            1     Partner  \n",
+       "4         0   45              161             422            1     Partner  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()\n",
+    "# df.head()\n",
+    "cust_data.head()\n",
+    "# cust_data.shape\n",
     "# df.columns"
    ]
   },
